[gd_scene load_steps=14 format=2]

[ext_resource path="res://Objects/SceneControl.tscn" type="PackedScene" id=1]
[ext_resource path="res://Music/hex1.ogg" type="AudioStream" id=2]
[ext_resource path="res://Levels/Music.gd" type="Script" id=3]
[ext_resource path="res://Objects/PlayerDrone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/PickupCube.gd" type="Script" id=5]
[ext_resource path="res://Blender/companionCubeMaterial.material" type="Material" id=6]
[ext_resource path="res://Font/BloodDroneFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://Sprites/play.png" type="Texture" id=8]
[ext_resource path="res://Objects/Conveyer.tscn" type="PackedScene" id=9]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.5, 4, 1.5 )

[sub_resource type="BoxShape" id=2]

[sub_resource type="ArrayMesh" id=3]
surfaces/0 = {
"aabb": AABB( -1, -1, -1, 2, 2.00001, 2.00001 ),
"array_data": PoolByteArray( 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 63, 0, 127, 0, 0, 0, 0, 129, 127, 165, 151, 247, 53, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 0, 127, 0, 0, 0, 0, 129, 127, 240, 51, 251, 56, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 0, 127, 0, 0, 0, 0, 129, 127, 240, 51, 247, 53, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 127, 0, 0, 0, 0, 129, 127, 165, 151, 251, 56, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 127, 0, 0, 127, 0, 127, 251, 59, 251, 56, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 127, 0, 0, 127, 0, 127, 251, 57, 247, 53, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 127, 0, 0, 127, 0, 127, 251, 57, 251, 56, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 127, 0, 0, 127, 0, 127, 251, 59, 247, 53, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 63, 129, 0, 0, 0, 0, 0, 129, 127, 165, 151, 247, 53, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 129, 0, 0, 0, 0, 0, 129, 127, 240, 51, 224, 47, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 129, 0, 0, 0, 0, 0, 129, 127, 165, 151, 224, 47, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 129, 0, 0, 0, 0, 0, 129, 127, 240, 51, 247, 53, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 0, 129, 0, 0, 0, 0, 127, 127, 251, 57, 251, 56, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 0, 129, 0, 0, 0, 0, 127, 127, 248, 55, 247, 53, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 0, 129, 0, 0, 0, 0, 127, 127, 248, 55, 251, 56, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 0, 129, 0, 0, 0, 0, 127, 127, 251, 57, 247, 53, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 127, 0, 0, 0, 0, 0, 129, 127, 240, 51, 251, 56, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 127, 0, 0, 0, 0, 0, 129, 127, 165, 151, 251, 58, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 127, 0, 0, 0, 0, 0, 129, 127, 240, 51, 251, 58, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 127, 0, 0, 0, 0, 0, 129, 127, 165, 151, 251, 56, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 129, 0, 0, 129, 0, 127, 240, 51, 247, 53, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 129, 0, 0, 129, 0, 127, 248, 55, 251, 56, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 129, 0, 0, 129, 0, 127, 248, 55, 247, 53, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 129, 0, 0, 129, 0, 127, 240, 51, 251, 56 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 0, 0, 1, 0, 3, 0, 4, 0, 6, 0, 5, 0, 4, 0, 5, 0, 7, 0, 8, 0, 10, 0, 9, 0, 8, 0, 9, 0, 11, 0, 12, 0, 14, 0, 13, 0, 12, 0, 13, 0, 15, 0, 16, 0, 18, 0, 17, 0, 16, 0, 17, 0, 19, 0, 20, 0, 22, 0, 21, 0, 20, 0, 21, 0, 23, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 36,
"material": ExtResource( 6 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="ArrayMesh" id=4]
surfaces/0 = {
"aabb": AABB( -1.02887, -1.02887, -1.02887, 2.05773, 2.05774, 2.05774 ),
"array_data": PoolByteArray( 238, 177, 131, 191, 238, 177, 131, 63, 238, 177, 131, 63, 0, 127, 0, 0, 0, 0, 129, 127, 165, 151, 247, 53, 238, 177, 131, 63, 238, 177, 131, 63, 238, 177, 131, 191, 0, 127, 0, 0, 0, 0, 129, 127, 240, 51, 251, 56, 238, 177, 131, 191, 238, 177, 131, 63, 238, 177, 131, 191, 0, 127, 0, 0, 0, 0, 129, 127, 240, 51, 247, 53, 238, 177, 131, 63, 238, 177, 131, 63, 238, 177, 131, 63, 0, 127, 0, 0, 0, 0, 129, 127, 165, 151, 251, 56, 238, 177, 131, 63, 238, 177, 131, 63, 238, 177, 131, 63, 0, 0, 127, 0, 0, 127, 0, 127, 251, 59, 251, 56, 238, 177, 131, 191, 238, 177, 131, 191, 238, 177, 131, 63, 0, 0, 127, 0, 0, 127, 0, 127, 251, 57, 247, 53, 238, 177, 131, 63, 238, 177, 131, 191, 238, 177, 131, 63, 0, 0, 127, 0, 0, 127, 0, 127, 251, 57, 251, 56, 238, 177, 131, 191, 238, 177, 131, 63, 238, 177, 131, 63, 0, 0, 127, 0, 0, 127, 0, 127, 251, 59, 247, 53, 238, 177, 131, 191, 238, 177, 131, 63, 238, 177, 131, 63, 129, 0, 0, 0, 0, 0, 129, 127, 165, 151, 247, 53, 238, 177, 131, 191, 238, 177, 131, 191, 238, 177, 131, 191, 129, 0, 0, 0, 0, 0, 129, 127, 240, 51, 224, 47, 238, 177, 131, 191, 238, 177, 131, 191, 238, 177, 131, 63, 129, 0, 0, 0, 0, 0, 129, 127, 165, 151, 224, 47, 238, 177, 131, 191, 238, 177, 131, 63, 238, 177, 131, 191, 129, 0, 0, 0, 0, 0, 129, 127, 240, 51, 247, 53, 238, 177, 131, 63, 238, 177, 131, 191, 238, 177, 131, 63, 0, 129, 0, 0, 0, 0, 127, 127, 251, 57, 251, 56, 238, 177, 131, 191, 238, 177, 131, 191, 238, 177, 131, 191, 0, 129, 0, 0, 0, 0, 127, 127, 248, 55, 247, 53, 238, 177, 131, 63, 238, 177, 131, 191, 238, 177, 131, 191, 0, 129, 0, 0, 0, 0, 127, 127, 248, 55, 251, 56, 238, 177, 131, 191, 238, 177, 131, 191, 238, 177, 131, 63, 0, 129, 0, 0, 0, 0, 127, 127, 251, 57, 247, 53, 238, 177, 131, 63, 238, 177, 131, 63, 238, 177, 131, 191, 127, 0, 0, 0, 0, 0, 129, 127, 240, 51, 251, 56, 238, 177, 131, 63, 238, 177, 131, 191, 238, 177, 131, 63, 127, 0, 0, 0, 0, 0, 129, 127, 165, 151, 251, 58, 238, 177, 131, 63, 238, 177, 131, 191, 238, 177, 131, 191, 127, 0, 0, 0, 0, 0, 129, 127, 240, 51, 251, 58, 238, 177, 131, 63, 238, 177, 131, 63, 238, 177, 131, 63, 127, 0, 0, 0, 0, 0, 129, 127, 165, 151, 251, 56, 238, 177, 131, 191, 238, 177, 131, 63, 238, 177, 131, 191, 0, 0, 129, 0, 0, 129, 0, 127, 240, 51, 247, 53, 238, 177, 131, 63, 238, 177, 131, 191, 238, 177, 131, 191, 0, 0, 129, 0, 0, 129, 0, 127, 248, 55, 251, 56, 238, 177, 131, 191, 238, 177, 131, 191, 238, 177, 131, 191, 0, 0, 129, 0, 0, 129, 0, 127, 248, 55, 247, 53, 238, 177, 131, 63, 238, 177, 131, 63, 238, 177, 131, 191, 0, 0, 129, 0, 0, 129, 0, 127, 240, 51, 251, 56 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 2, 0, 0, 0, 3, 0, 1, 0, 4, 0, 5, 0, 6, 0, 4, 0, 7, 0, 5, 0, 8, 0, 9, 0, 10, 0, 8, 0, 11, 0, 9, 0, 12, 0, 13, 0, 14, 0, 12, 0, 15, 0, 13, 0, 16, 0, 17, 0, 18, 0, 16, 0, 19, 0, 17, 0, 20, 0, 21, 0, 22, 0, 20, 0, 23, 0, 21, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 36,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[node name="Level" type="Spatial"]

[node name="SceneControl" parent="." instance=ExtResource( 1 )]

[node name="Music" parent="SceneControl" index="0"]
stream = ExtResource( 2 )
volume_db = -15.0
script = ExtResource( 3 )

[node name="PlayerDrone" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0 )

[node name="Body" parent="PlayerDrone" index="1"]
frame = 1

[node name="PlayerPickup" type="Area" parent="PlayerDrone/Body" index="0"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="PlayerDrone/Body/PlayerPickup"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
shape = SubResource( 1 )

[node name="CubeTarget" type="Spatial" parent="PlayerDrone/Body" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )

[node name="CubeDropTarget" type="Spatial" parent="PlayerDrone/Body" index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, 0 )

[node name="PickupCube" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 4, 0 )
can_sleep = false
script = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="PickupCube"]
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="PickupCube/CollisionShape"]
mesh = SubResource( 3 )
material/0 = null

[node name="OutlineMesh" type="MeshInstance" parent="PickupCube/CollisionShape/MeshInstance"]
visible = false
mesh = SubResource( 4 )
material/0 = null

[node name="OmniLight" type="OmniLight" parent="PickupCube"]
light_energy = 0.0

[node name="UI" type="Node" parent="."]

[node name="IDToggle" type="CheckBox" parent="UI"]
margin_left = 710.0
margin_top = 5.36035
margin_right = 867.0
margin_bottom = 53.3604
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 7 )
pressed = true
text = "Show ID"

[node name="IDAssign" type="LineEdit" parent="UI"]
margin_left = 867.0
margin_top = 139.0
margin_right = 944.0
margin_bottom = 163.0
max_length = 4
placeholder_text = "ENTER ID"

[node name="Button" type="Button" parent="UI"]
margin_left = 17.0
margin_top = 9.0
margin_right = 97.0
margin_bottom = 89.0
icon = ExtResource( 8 )

[node name="Conveyer" parent="." instance=ExtResource( 9 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 8, 2, 0 )
[connection signal="body_entered" from="PlayerDrone/Body/PlayerPickup" to="PickupCube" method="_on_PlayerPickup_body_entered"]
[connection signal="body_exited" from="PlayerDrone/Body/PlayerPickup" to="PickupCube" method="_on_PlayerPickup_body_exited"]

[editable path="SceneControl"]

[editable path="PlayerDrone"]
